# real-time-xai-algo-trading

./: README.md  USER_GUIDE.md  config.py  demo.py  install.py  requirements.txt  run_platform.py
.kiro/specs/rust-trading-platform/: design.md  requirements.md  tasks.md
backend/: __init__.py  main.py  xai_explainer.py
frontend/: __init__.py  dashboard.py
rust-trading-platform/: .env  .gitignore  Cargo.toml  README.md
rust-trading-platform/migrations/: 001_initial_schema.sql
rust-trading-platform/src/: lib.rs  main.rs
rust-trading-platform/src/api/: mod.rs  rest.rs  websocket.rs
rust-trading-platform/src/config/: mod.rs
rust-trading-platform/src/data/: mod.rs
rust-trading-platform/src/database/: migrations.rs  mod.rs  repositories.rs
rust-trading-platform/src/error/: mod.rs
rust-trading-platform/src/market_data/: mock_provider.rs  mod.rs  yahoo_finance.rs
rust-trading-platform/src/performance/: mod.rs
rust-trading-platform/src/strategy/: mod.rs
rust-trading-platform/src/xai/: mod.rs
